--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/proxy": "^2.0.1",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "nuxt": "^2.14.0"
+    "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
+    "cors": "^2.8.5",
+    "nuxt": "^2.14.0",
+    "qs": "^6.9.4",
+    "vue-chartjs": "^3.5.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
