--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "API_URL_BROWSER=https://mcare.lemonhc.com build --modern=server",
-    "start": "API_URL_BROWSER=https://mcare.lemonhc.com start --modern=server",
+    "build": "build",
+    "start": "start",
     "generate": "nuxt generate"
   },
   "dependencies": {
